<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2022 NXP
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/layout_ble_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/ble_state"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ble_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/ble_not_started"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_uwb_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_ble_state">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/uwb_state"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/uwb_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/uwb_not_started"
            android:textSize="18sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imgArrow"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_marginTop="200dp"
        app:layout_constraintBottom_toTopOf="@id/uwb_distance_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/black_arrow" />

    <TextView
        android:id="@+id/uwb_distance_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uwb_distance_not_started"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/uwb_aoa_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgArrow" />

    <TextView
        android:id="@+id/uwb_aoa_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uwb_aoa_not_started"
        android:textSize="24sp"
        android:layout_marginBottom="200dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uwb_distance_info" />

    <TextView
        android:id="@+id/uwb_ranging_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uwb_ranging_device_not_started"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>